--- a/HandsOnArchitectureComponents/app/src/main/res/values/strings.xml
+++ b/HandsOnArchitectureComponents/app/src/main/res/values/strings.xml
@@ -1,4 +1,13 @@
 <resources>
     <string name="app_name">HandsOnArchitectureComponents</string>
     <string name="action_settings">Settings</string>
+
+    <string name="date_hint">Hint</string>
+    <string name="event_description">Event Description</string>
+    <string name="add_event">Add Event</string>
+    <string name="title">Title</string>
+    <string name="days_until">%d days remaining</string>
+    <string name="set_date">Set Date</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
